--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,10 +1,10 @@
 body{
-background-color: darkslategrey;
-color: azure;
+background-color: black;
+color: aqua;
 font-size: 1.1em;
 }
 h1{
-color: coral;
+color: red;
 }
 intro{
 font-size: 1.3em;
